--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,6 +6,14 @@
         xmlns:local="clr-namespace:WpfPanelControlDemo"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
+    <Window.Resources>
+        <Style x:Key="formTextBlock">
+            <Setter Property="TextBlock.Margin" Value="10 0"/>
+        </Style>
+        <Style TargetType="TextBox">
+            <Setter Property="TextBox.Margin" Value="10 5"/>
+        </Style>
+    </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"></RowDefinition>
@@ -19,21 +27,30 @@
         <Grid
             Grid.Row="0"
             Grid.Column="0"
-            Grid.ColumnSpan="2"
-            Background="LightGray">
+            Grid.ColumnSpan="2">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"></RowDefinition>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"></ColumnDefinition>
             </Grid.ColumnDefinitions>
+            <!--<Grid.Background>
+                <SolidColorBrush Color="LightGray"/>
+            </Grid.Background>-->
+            <Grid.Background>
+                <LinearGradientBrush StartPoint="0,0" EndPoint="1,0">
+                    <GradientStop Offset="0" Color="White" />
+                    <GradientStop Offset="1" Color="LightGray" />
+                </LinearGradientBrush>
+            </Grid.Background>
             <TextBlock
                 Grid.Row="0"
                 Grid.Column="0"
                 VerticalAlignment="Center"
                 HorizontalAlignment="Center"
                 Margin="0 15 0 15"
-                FontSize="48">
+                FontSize="48"
+                FontFamily="Times New Roman">
                 WPF Panels and Controls Demo
             </TextBlock>
         </Grid>
@@ -44,10 +61,11 @@
             Background="WhiteSmoke"
             Width="250"
             Margin="5 10 5 10">
-            <TextBlock Margin="10 0">Title</TextBlock>
-            <TextBox x:Name="titleTextBox" Margin="10 5"></TextBox>
-            <TextBlock Margin="10 0">Author</TextBlock>
-            <TextBox x:Name="authorTextBox" Margin="10 5"></TextBox>
+            <TextBlock Style="{StaticResource ResourceKey=formTextBlock}" Text="Title"/>
+            <TextBox x:Name="titleTextBox" ></TextBox>
+            <!--<Label Margin="10 0" Content="Author"/>-->
+            <TextBlock Style="{StaticResource ResourceKey=formTextBlock}" Text="Author"/>
+            <TextBox x:Name="authorTextBox" ></TextBox>
             <Button x:Name="addBookButton" Margin="10 5" Width="50" HorizontalAlignment="Left">Add</Button>
         </StackPanel>
         <ListView
